kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-ledger-service
  labels:
    app: lab-ledger
spec:
  type: ClusterIP
  selector:
    app: lab-ledger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
